# medion-hm-sec-sc

./: CMakeLists.txt  LICENSE  Medion_Programmieradapter-Body.stl  Medion_Programmieradapter.FCStd  README.md  crc16.c  crc16.h  delay.h  flash.sh.in  main.c  medion-hm-sec-sc.h  stm8l.h
asksin/: as_aes_reply.c  as_aes_reply.h  as_config_data.h  as_config_end.c  as_config_end.h  as_config_req.c  as_config_req.h  as_config_start.c  as_config_start.h  as_config_write.c  as_config_write.h  as_decode.c  as_decode.h  as_defines.h  as_encode.c  as_encode.h  as_factory_reset.c  as_factory_reset.h  as_get_aes_key_index.c  as_get_aes_key_index.h  as_handle_cyclic_info.c  as_handle_cyclic_info.h  as_handle_packet.c  as_handle_packet.h  as_listen.c  as_listen.h  as_packet.h  as_peer_list_req.c  as_peer_list_req.h  as_poll.c  as_poll.h  as_send.c  as_send.h  as_send_contact_state.c  as_send_contact_state.h  as_send_device_info.c  as_send_device_info.h  as_send_status.c  as_send_status.h  as_set_aes_key_index.c  (+3 more)
battery/: measure_battery.c  measure_battery.h
button/: button_init.c  button_init.h  button_isr.c  button_isr.h
led/: led_blink.c  led_blink.h  led_init.c  led_init.h  led_isr.c  led_isr.h  led_off.c  led_off.h  led_on.c  led_on.h  led_toggle.c  led_toggle.h  wait_for_led.c  wait_for_led.h
radio/: radio_defines.h  radio_deinit.c  radio_deinit.h  radio_enter_receive.c  radio_enter_receive.h  radio_init.c  radio_init.h  radio_poll.c  radio_poll.h  radio_read_burst.c  radio_read_burst.h  radio_read_int.c  radio_read_int.h  radio_read_reg.c  radio_read_reg.h  radio_read_status.c  radio_read_status.h  radio_receive.c  radio_receive.h  radio_received.c  radio_received.h  radio_send.c  radio_send.h  radio_sent.c  radio_sent.h  radio_switch_100k.c  radio_switch_100k.h  radio_wait.c  radio_wait.h  radio_wait_int.c  radio_wait_int.h  radio_white.c  radio_white.h  radio_write_burst.c  radio_write_burst.h  radio_write_reg.c  radio_write_reg.h  si4430.h
relay/: relay_init.c  relay_init.h  relay_isr.c  relay_isr.h
spi/: spi_defines.h  spi_disable.c  spi_disable.h  spi_enable.c  spi_enable.h  spi_init.c  spi_init.h  spi_send_byte.c  spi_send_byte.h
timer/: clear_singleshot_timer.c  clear_singleshot_timer.h  clear_timeout.c  clear_timeout.h  get_tick.c  get_tick.h  led_timer_deinit.c  led_timer_deinit.h  led_timer_init.c  led_timer_init.h  rtc_battery_timer_disable.c  rtc_battery_timer_disable.h  rtc_battery_timer_enable.c  rtc_battery_timer_enable.h  rtc_isr.c  rtc_isr.h  set_singleshot_timer.c  set_singleshot_timer.h  set_timeout.c  set_timeout.h  singleshot_isr.c  singleshot_isr.h  tick_deinit.c  tick_deinit.h  tick_elapsed.h  tick_init.c  tick_init.h  tick_isr.c  tick_isr.h  wait_timeout.c  wait_timeout.h
